changed a bunch of things