@@ -117,6 +117,11 @@
 						--add-opens java.base/java.util=ALL-UNNAMED
 						--add-opens java.base/java.util.concurrent=ALL-UNNAMED
 						--enable-native-access=ALL-UNNAMED
+						--add-opens=java.base/java.nio=ALL-UNNAMED
+						-Djansi.passthrough=true
+						-Dterminal.ansi=true
+						-Dprism.marlin.log=false
+						-Dsun.misc.Unsafe.skipWarnings=true
 					</jvmArguments>
 				</configuration>
 				<executions>
@@ -144,11 +149,15 @@
 						<option>--add-modules</option>
 						<option>javafx.controls,javafx.fxml</option>
 						<option>--add-exports</option>
-
-						
 						<option>java.base/java.lang=ALL-UNNAMED</option>
 						<option>--enable-native-access=ALL-UNNAMED</option>
+						<option>--add-opens</option>
+						<option>java.base/java.nio=ALL-UNNAMED</option>
 					</options>
+					<jvmArgs>
+						<jvmArg>-Dprism.marlin.log=false</jvmArg>
+						<jvmArg>-Dsun.misc.Unsafe.skipWarnings=true</jvmArg>
+					</jvmArgs>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -208,6 +217,12 @@
 							<opt>--add-opens</opt>
 							<opt>java.base/java.util.concurrent=ALL-UNNAMED</opt>
 							<opt>--enable-native-access=ALL-UNNAMED</opt>
+							<opt>--add-opens</opt>
+							<opt>java.base/java.nio=ALL-UNNAMED</opt>
+							<opt>-Djansi.passthrough=true</opt>
+							<opt>-Dterminal.ansi=true</opt>
+							<opt>-Dprism.marlin.log=false</opt>
+							<opt>-Dsun.misc.Unsafe.skipWarnings=true</opt>
 						</opts>
 					</jre>
 					<versionInfo>
